--- a/day1/package.json
+++ b/day1/package.json
@@ -4,14 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+	"dev": "webpack --mode development",
+	"build": "webpack --mode production"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel": "^6.23.0",
+    "babel-cli": "^6.26.0",
+    "webpack": "^4.39.3",
     "webpack-cli": "^3.3.7"
-  },
-  "dependencies": {
-    "webpack": "^4.39.2"
   }
 }
