--- a/webpack-demo/package.json
+++ b/webpack-demo/package.json
@@ -1,12 +1,28 @@
 {
   "name": "webpack-demo",
   "version": "1.0.0",
-  "private":"true",
+  "private": "true",
   "description": "",
+  "main": "./src/index.js",
+  "scripts": {
+    "bundle": "webpack"
+  },
   "devDependencies": {
+    "autoprefixer": "^9.6.1",
+    "css-loader": "^3.2.0",
+    "imports-loader": "^0.8.0",
+    "node-sass": "^4.12.0",
+    "postcss-loader": "^3.0.0",
+    "sass-loader": "^8.0.0",
+    "style-loader": "^1.0.0",
     "webpack": "^4.39.3",
     "webpack-cli": "^3.3.7"
   },
   "author": "youth1997",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "file-loader": "^4.2.0",
+    "url-loader": "^2.1.0",
+    "vue-loader": "^15.7.1"
+  }
 }
