--- a/hot-module-replacement-demo/package.json
+++ b/hot-module-replacement-demo/package.json
@@ -1,25 +1,23 @@
 {
-  "name": "loader-demo",
+  "name": "hot-module-replacement-demo",
   "version": "1.0.0",
   "description": "",
-  "main": "./src/index.js",
+  "main": "index.js",
   "scripts": {
-    "bundle": "webpack"
+    "start": "webpack-dev-server"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "autoprefixer": "^9.6.1",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.2.0",
-    "file-loader": "^4.2.0",
+    "express": "^4.17.1",
     "html-webpack-plugin": "^3.2.0",
-    "node-sass": "^4.12.0",
     "postcss-loader": "^3.0.0",
-    "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
-    "url-loader": "^2.1.0",
     "webpack": "^4.39.3",
-    "webpack-cli": "^3.3.7"
+    "webpack-cli": "^3.3.7",
+    "webpack-dev-middleware": "^3.7.1",
+    "webpack-dev-server": "^3.8.0"
   }
 }
